--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     database: MYSQL
     generate-ddl: true
   datasource:
-    url: jdbc:mysql://localhost:3306/dev
+    url: jdbc:mysql://localhost:3306/dev?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
     username: root
     password: toor
 ---
